--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: "VioletSansRegular";
+  src: local("VioletSansRegular"),
+   url("./fonts/VioletSans-Regular.ttf") format("truetype");  
+}
